// ============================================================================
// EMPLOYEE MANAGEMENT SYSTEM — dbdiagram.io (DBML Code)
// Version: 2.2 (29 Tables — Announcements, Notifications & Revised Auth Flow)
// 
// Instructions:
// 1. Go to https://dbdiagram.io
// 2. Clear the editor on the left
// 3. Paste this entire code
// ============================================================================

Project Employee_Management_System {
  database_type: 'PostgreSQL'
  Note: 'Enterprise Employee Management System Database Schema v2.2'
}

// ----------------------------------------------------------------------------
// MODULE A: CORE HR — Reference tables
// ----------------------------------------------------------------------------

Table addresses {
  address_id bigint [pk, increment]
  public_id uuid [unique, not null]
  street_address varchar [not null]
  city varchar [not null]
  state varchar [not null]
  country varchar [not null, default: 'India']
  pincode varchar [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table designations {
  designation_id bigint [pk, increment]
  public_id uuid [unique, not null]
  title varchar [unique, not null]
  grade_level varchar
  description text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table departments {
  dept_id bigint [pk, increment]
  public_id uuid [unique, not null]
  dept_name varchar [unique, not null]
  dept_code varchar [unique, not null, note: 'e.g. ENG, HR, FIN, MKT']
  description text
  head_employee_id bigint
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// ----------------------------------------------------------------------------
// MODULE B: AUTHENTICATION & RBAC
// ----------------------------------------------------------------------------

Table roles {
  role_id bigint [pk, increment]
  public_id uuid [unique, not null]
  role_name varchar [unique, not null]
  description text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table permissions {
  permission_id bigint [pk, increment]
  public_id uuid [unique, not null]
  permission_name varchar [unique, not null]
  description text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table role_permissions {
  role_id bigint [not null]
  permission_id bigint [not null]
  granted_at timestamptz [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (role_id, permission_id) [pk]
  }
}

Table users {
  user_id bigint [pk, increment]
  public_id uuid [unique, not null]
  email varchar [unique, not null, note: 'Login email — synced with employees.email']
  display_name varchar [not null]
  secondary_email varchar [note: 'Recovery email for forgot password']
  password_hash text [not null]
  is_active boolean [not null, default: true]
  last_login timestamptz
  password_reset_token varchar
  password_reset_expires_at timestamptz
  password_reset_used_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table user_roles {
  user_id bigint [not null]
  role_id bigint [not null]
  assigned_at timestamptz [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (user_id, role_id) [pk]
  }
}

// ----------------------------------------------------------------------------
// MODULE C: CORE HR — Employee tables
// ----------------------------------------------------------------------------

Table employees {
  emp_id bigint [pk, increment]
  public_id uuid [unique, not null]
  employee_code varchar [unique, not null]
  first_name varchar [not null]
  last_name varchar [not null]
  date_of_birth date [not null]
  gender varchar [not null, note: 'male, female, other, prefer_not_to_say']
  email varchar [unique, not null, note: 'Synced with users.email']
  phone varchar [unique, not null]
  joining_date date [not null]
  employee_status varchar [not null, default: 'active', note: 'active, inactive, on_leave, terminated, resigned']
  employment_type varchar [not null, default: 'full_time', note: 'full_time, part_time, contract, intern']
  user_id bigint [unique, not null, note: 'FK to users — every employee has a user account']
  dept_id bigint
  designation_id bigint
  reporting_manager_id bigint
  is_active boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table employee_addresses {
  employee_address_id bigint [pk, increment]
  employee_id bigint [not null]
  address_id bigint [not null]
  address_type varchar [not null, note: 'current, permanent']
  is_primary boolean [not null, default: false]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (employee_id, address_type) [unique]
  }
}

Table emergency_contacts {
  contact_id bigint [pk, increment]
  emp_id bigint [not null]
  contact_name varchar [not null]
  relationship varchar [not null]
  phone varchar [not null]
  email varchar
  is_primary boolean [not null, default: false]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// ----------------------------------------------------------------------------
// MODULE D: TIME & ATTENDANCE
// ----------------------------------------------------------------------------

Table attendance {
  attendance_id bigint [pk, increment]
  public_id uuid [unique, not null]
  emp_id bigint [not null]
  date date [not null]
  check_in timestamptz
  check_out timestamptz
  work_mode varchar [not null, default: 'in_office', note: 'in_office, wfh, hybrid, field']
  status varchar [not null, default: 'present', note: 'present, absent, half_day, late, on_leave']
  total_hours decimal [default: 0.00]
  notes text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (emp_id, date) [unique]
  }
}

Table holidays {
  holiday_id bigint [pk, increment]
  public_id uuid [unique, not null]
  name varchar [not null]
  date date [not null]
  holiday_type varchar [not null, default: 'company', note: 'national, regional, company, optional']
  year int [not null]
  is_optional boolean [not null, default: false]
  applicable_region varchar [not null, default: 'ALL']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (date, holiday_type, applicable_region) [unique]
  }
}

// ----------------------------------------------------------------------------
// MODULE E: LEAVE MANAGEMENT
// ----------------------------------------------------------------------------

Table leave_types {
  leave_type_id bigint [pk, increment]
  public_id uuid [unique, not null]
  name varchar [unique, not null]
  description text
  max_days_per_year int [not null, default: 0]
  is_paid boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table leave_requests {
  leave_id bigint [pk, increment]
  public_id uuid [unique, not null]
  employee_id bigint [not null]
  leave_type_id bigint [not null]
  start_date date [not null]
  end_date date [not null]
  total_days decimal [not null]
  reason text
  status varchar [not null, default: 'pending', note: 'pending, approved, rejected, cancelled']
  approved_by bigint
  rejection_reason text
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table leave_approval_history {
  history_id bigint [pk, increment]
  leave_id bigint [not null]
  action_by bigint [not null]
  action varchar [not null, note: 'submitted, approved, rejected, escalated, cancelled']
  remarks text
  action_at timestamptz [not null]
}

Table employee_leave_balances {
  balance_id bigint [pk, increment]
  public_id uuid [unique, not null]
  employee_id bigint [not null]
  leave_type_id bigint [not null]
  year int [not null]
  total_allocated int [not null, default: 0]
  used_leaves int [not null, default: 0]
  remaining_leaves int [note: 'generated: total_allocated - used_leaves']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (employee_id, leave_type_id, year) [unique]
  }
}

// ----------------------------------------------------------------------------
// MODULE F: COMPENSATION & PAYROLL
// ----------------------------------------------------------------------------

Table salaries {
  salary_id bigint [pk, increment]
  public_id uuid [unique, not null]
  emp_id bigint [not null]
  basic_salary decimal [not null]
  net_salary decimal [not null, note: 'NOT NULL — always computed']
  currency varchar [not null, default: 'INR']
  effective_from date [not null]
  effective_to date
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table salary_components {
  component_id bigint [pk, increment]
  salary_id bigint [not null]
  component_name varchar [not null]
  component_type varchar [not null, note: 'earning, deduction']
  amount decimal [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table bank_details {
  bank_detail_id bigint [pk, increment]
  public_id uuid [unique, not null]
  emp_id bigint [not null]
  bank_name varchar [not null]
  branch_name varchar
  account_number varchar [not null]
  routing_code varchar [not null]
  account_type varchar [not null, default: 'savings', note: 'savings, current']
  is_primary boolean [not null, default: true]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table payroll_runs {
  payroll_id bigint [pk, increment]
  public_id uuid [unique, not null]
  emp_id bigint [not null]
  salary_id bigint
  pay_period_start date [not null]
  pay_period_end date [not null]
  gross_amount decimal [not null, default: 0.00]
  total_deductions decimal [not null, default: 0.00]
  net_paid decimal [not null, default: 0.00]
  payment_date date
  payment_status varchar [not null, default: 'pending', note: 'pending, processed, paid, failed']
  payment_method varchar [note: 'bank_transfer, cheque, cash']
  transaction_ref varchar
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (emp_id, pay_period_start, pay_period_end) [unique]
  }
}

// ----------------------------------------------------------------------------
// MODULE G: DOCUMENT MANAGEMENT
// ----------------------------------------------------------------------------

Table employee_documents {
  document_id bigint [pk, increment]
  public_id uuid [unique, not null]
  employee_id bigint [not null]
  document_name varchar [not null]
  document_type varchar [not null, note: 'aadhaar, pan, passport, resume, offer_letter, experience_letter, other']
  document_url text [not null]
  file_size_bytes bigint
  uploaded_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// ----------------------------------------------------------------------------
// MODULE H: PROJECT MANAGEMENT
// ----------------------------------------------------------------------------

Table projects {
  project_id bigint [pk, increment]
  public_id uuid [unique, not null]
  project_name varchar [not null]
  description text
  project_head_id bigint [note: 'FK to employees — project lead']
  start_date date
  end_date date
  status varchar [not null, default: 'planning', note: 'planning, active, on_hold, completed, cancelled']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table project_members {
  project_id bigint [not null]
  employee_id bigint [not null]
  role_in_project varchar
  assigned_at timestamptz [not null]
  created_at timestamptz [not null]
  updated_at timestamptz [not null]

  indexes {
    (project_id, employee_id) [pk]
  }
}

// ----------------------------------------------------------------------------
// MODULE I: PERFORMANCE REVIEWS
// ----------------------------------------------------------------------------

Table performance_reviews {
  review_id bigint [pk, increment]
  public_id uuid [unique, not null]
  emp_id bigint [not null]
  reviewer_id bigint [not null]
  review_period_start date [not null]
  review_period_end date [not null]
  rating decimal
  comments text
  status varchar [not null, default: 'draft', note: 'draft, submitted, acknowledged, finalized']
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

// ----------------------------------------------------------------------------
// MODULE J: ANNOUNCEMENTS & NOTIFICATIONS
// ----------------------------------------------------------------------------

Table announcements {
  announcement_id bigint [pk, increment]
  public_id uuid [unique, not null]
  title varchar [not null]
  content text [not null]
  priority varchar [not null, default: 'normal', note: 'low, normal, high, urgent']
  target_type varchar [not null, note: 'all, department']
  target_dept_id bigint [note: 'Required when target_type = department']
  posted_by bigint [not null, note: 'FK to employees.emp_id']
  is_active boolean [not null, default: true]
  expires_at timestamptz
  created_at timestamptz [not null]
  updated_at timestamptz [not null]
}

Table notifications {
  notification_id bigint [pk, increment]
  public_id uuid [unique, not null]
  title varchar [not null]
  message text [not null]
  notification_type varchar [not null, note: 'leave, attendance, payroll, announcement, review, general']
  target_type varchar [not null, note: 'employee, department, all']
  target_employee_id bigint [note: 'Required when target_type = employee']
  target_dept_id bigint [note: 'Required when target_type = department']
  created_by bigint [note: 'FK to employees — NULL for system-generated']
  created_at timestamptz [not null]
}

Table notification_recipients {
  recipient_id bigint [pk, increment]
  notification_id bigint [not null]
  emp_id bigint [not null, note: 'FK to employees — the recipient']
  status varchar [not null, default: 'unread', note: 'unread, read, archived']
  read_at timestamptz
  created_at timestamptz [not null]

  indexes {
    (notification_id, emp_id) [unique]
  }
}

// ----------------------------------------------------------------------------
// MODULE K: AUDIT LOGS
// ----------------------------------------------------------------------------

Table audit_logs {
  log_id bigint [pk, increment]
  user_id bigint
  action varchar [not null]
  entity_name varchar [not null]
  entity_id varchar
  old_values jsonb
  new_values jsonb
  ip_address varchar
  created_at timestamptz [not null]
}

// ============================================================================
// RELATIONSHIPS / FOREIGN KEYS
// ============================================================================

// Core HR
Ref: employees.user_id - users.user_id
Ref: employees.dept_id > departments.dept_id
Ref: departments.head_employee_id - employees.emp_id
Ref: employees.designation_id > designations.designation_id
Ref: employees.reporting_manager_id > employees.emp_id
Ref: employee_addresses.employee_id > employees.emp_id
Ref: employee_addresses.address_id > addresses.address_id
Ref: emergency_contacts.emp_id > employees.emp_id

// Auth & RBAC
Ref: user_roles.user_id > users.user_id
Ref: user_roles.role_id > roles.role_id
Ref: role_permissions.role_id > roles.role_id
Ref: role_permissions.permission_id > permissions.permission_id

// Attendance
Ref: attendance.emp_id > employees.emp_id

// Leave Requests
Ref: leave_requests.employee_id > employees.emp_id
Ref: leave_requests.leave_type_id > leave_types.leave_type_id
Ref: leave_requests.approved_by > employees.emp_id
Ref: leave_approval_history.leave_id > leave_requests.leave_id
Ref: leave_approval_history.action_by > employees.emp_id
Ref: employee_leave_balances.employee_id > employees.emp_id
Ref: employee_leave_balances.leave_type_id > leave_types.leave_type_id

// Compensation & Payroll
Ref: salaries.emp_id > employees.emp_id
Ref: salary_components.salary_id > salaries.salary_id
Ref: bank_details.emp_id > employees.emp_id
Ref: payroll_runs.emp_id > employees.emp_id
Ref: payroll_runs.salary_id > salaries.salary_id

// Documents & Projects
Ref: employee_documents.employee_id > employees.emp_id
Ref: projects.project_head_id > employees.emp_id
Ref: project_members.project_id > projects.project_id
Ref: project_members.employee_id > employees.emp_id

// Performance & Audit
Ref: performance_reviews.emp_id > employees.emp_id
Ref: performance_reviews.reviewer_id > employees.emp_id
Ref: audit_logs.user_id > users.user_id

// Announcements & Notifications
Ref: announcements.target_dept_id > departments.dept_id
Ref: announcements.posted_by > employees.emp_id
Ref: notifications.target_employee_id > employees.emp_id
Ref: notifications.target_dept_id > departments.dept_id
Ref: notifications.created_by > employees.emp_id
Ref: notification_recipients.notification_id > notifications.notification_id
Ref: notification_recipients.emp_id > employees.emp_id
